# Slurm-web

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: container.yml  frontend-ci.yml  python-ci.yml
assets/screenshots/: build.yaml
containers/: Dockerfile  compose.yaml  docker-entrypoint.sh
dev/: README.md  crawl-tests-assets  generate-branding-assets  setup-dev-environment
dev/conf/: gateway.ini.j2  policy.ini.j2  realm-slurm.json.j2
dev/crawler/: lib.py
dev/lib/: __init__.py  paths.py
dev/lib/crawler/: agent.py  gateway.py  lib.py  prometheus.py  slurmrestd.py
dev/lib/devenv/: __init__.py  agent.py  branding.py  cluster.py  constants.py  gateway.py  keycloak.py  main.py  ports.py
docs/: antora.yml
docs/man/: slurm-web-gen-session-key.adoc
docs/modules/conf/: nav.adoc
docs/modules/install/: nav.adoc
docs/modules/usage/: nav.adoc
docs/utils/: build.yaml  conf-ex.ini.j2  conf-ref.adoc.j2  gen-conf-ex.py  gen-conf-ref.py  policy-actions.adoc.j2
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: config.json
frontend/src/: main.ts
frontend/src/components/: ClusterMainLayout.vue  MainMenu.vue
lib/exec/: slurm-web-compat
slurmweb/: conf.py  ui.py
slurmweb/apps/: __init__.py  agent.py  gateway.py  genjwt.py  gensession.py  ldap.py
slurmweb/exec/: genjwt.py  gensession.py  main.py
slurmweb/slurmrestd/: __init__.py
slurmweb/tests/: test_conf.py  test_ui.py
slurmweb/views/: agent.py  gateway.py
(+638 files in other folders)
